feat: 4-analyzer add the main functionality